# BardzoMiniSCADA

./: BardzoMiniSCADA.pro  CMakeLists.txt  Dane.hpp  OknoGlowne.cpp  OknoGlowne.hpp  README.md  Typy.hpp  WykresLiniowy.hpp  Wyswietlacz.hpp  ZbiorDanych.hpp  main.cpp
core/: ConfigManager.cpp  ConfigManager.h  DataBuffer.cpp  DataBuffer.h  DataLogger.cpp  DataLogger.h  DataProcessor.cpp  DataProcessor.h  DisplayLogic.cpp  DisplayLogic.h  NetworkManager.cpp  NetworkManager.h
gui/: BarDiagram.cpp  BarDiagram.h  BarDisplay.cpp  BarDisplay.h  ConfigurationPanel.cpp  ConfigurationPanel.h  DataDisplay.cpp  DataDisplay.h  Diagram.h  ElementConfigDialog.cpp  ElementConfigDialog.h  LineDiagram.cpp  LineDiagram.h  MainWindow.cpp  MainWindow.h  PointDiagram.cpp  PointDiagram.h  TextDisplay.cpp  TextDisplay.h
